src/blocks/HeaderMinify/HeaderMinify.scss
@import '../../../styles/mixins.scss';
@import '../../../styles/variables.scss';

$block: '.#{$ns}header-minify-block';
$backgroundWidth: 1440px;

#{$block} {
    position: relative;
    z-index: 1;
    color: #001a2b;

    &_header-space {
        padding-top: var(--header-height);
        margin-top: calc(var(--header-height) * -1);
    }

    &__video {
        position: absolute;
        inset: 0;
        z-index: -1;
        object-fit: cover;
        width: 100%;
        height: 100%;
    }

    &__container {
        padding-top: 256px;
        padding-bottom: 155px;
    }

    &__title {
        @include text-size(display-4);
        margin: 0;
        position: relative;
        margin-bottom: $indentSM;

        @media (max-width: map-get($gridBreakpoints, 'sm')) {
            @include text-size(display-2);
        }
    }

    &__description {
        position: relative;
        margin-bottom: $indentM;
        opacity: 0.8;

        .yfm {
            @include text-size(header-2);
            font-weight: 500;
        }
    }

    &__buttons {
        display: flex;
        gap: $indentXXXS;
        position: relative;
        flex-wrap: wrap;
    }
}

